--- a/LogisticAppProject/app/src/main/res/layout/activity_login.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_login.xml
@@ -1,50 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
- <TextView
-        android:id="@+id/textView2"
+
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/tUsuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="176dp"
-        android:ems="10"
-        android:hint="Usuario"
-        android:inputType="number|textPersonName"
-        android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="26dp" />
+        <EditText
+            android:id="@+id/txt_login_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Número de indentificación"
+            android:inputType="number|textPersonName"
+            android:layout_marginTop="100dp"/>
 
-    <EditText
-        android:id="@+id/tPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@+id/tUsuario"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp" />
+        <EditText
+            android:id="@+id/txt_login_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Número de indentificación"
 
-    <Button
-        android:id="@+id/bEntrar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:text="entrar"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/tPassword"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:inputType="textPassword"
+            android:layout_below="@+id/txt_login_username"
+            android:layout_marginTop="50dp"/>
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txt_login_password"
+
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="login" />
+
+    </RelativeLayout>
+
+</ScrollView>
